# sky

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  vercel.json
main/: admin.py  forms.py  urls.py  views.py
message/: models.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_message_sender.py  0003_message_receiver_alter_message_sender.py  0004_room_message_room_id.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_image.py  0003_post_total_dislikes.py  0004_alter_post_title.py  0004_comment.py  0005_comment_number_of_comments.py  0006_delete_comment.py
profiles/: admin.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0002_alter_user_username.py  0003_alter_user_username.py  0003_user_birth_date_user_gender_user_profile_image_and_more.py  0004_alter_user_bio.py  0004_user_birth_date_user_gender.py  0005_alter_user_bio.py  0005_alter_user_birth_date.py  0005_user_avatar_pic.py  0006_alter_user_bio_alter_user_profession.py  0006_user_avatar_pic.py  0007_alter_user_profession.py  0008_alter_user_birth_date.py
sky/: settings.py  urls.py  wsgi.py
static/: style.css
templates/: 404.html  base.html  footer.html  login.html  main.html  post-create.html  post-delete.html  post-edit.html  profile-details.html  profile-edit.html  register.html  rooms.html
