[tool.poetry]
name = "sky"
version = "0.1.0"
description = ""
authors = ["Aymammet Annamyradov <aymammet2018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
dj-database-url = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
